test/classes/initializers/oldAndNew.good
oldAndNew.chpl:8: error: Definition of both constructor 'badClass' and initializer 'init'.  Please choose one.
